--- a/static/css/fixed.css
+++ b/static/css/fixed.css
@@ -12,6 +12,7 @@ margin-right: 0px!important;
 /*--- Fix for Fixed Navbar jumping on scroll --*/
 .fixed-top{
   -webkit-backface-visibility: hidden;
+  position: fixed;
 }
 
 /*--- Fixed Landing Page Section --*/
