--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,10 @@
 video::-internal-media-controls-overlay-cast-button {
     display: none !important;
 }
+*::-webkit-media-controls-start-playback-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
 body{
   overflow-x: hidden;
   font-family: 'Vollkorn', serif;
