--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,9 +6,19 @@
 video::-internal-media-controls-overlay-cast-button {
     display: none !important;
 }
-*::-webkit-media-controls-start-playback-button {
-  display: none!important;
-  -webkit-appearance: none;
+.video::-webkit-media-controls-panel {
+    display: none!important;
+    -webkit-appearance: none;
+}
+
+.video::--webkit-media-controls-play-button {
+    display: none!important;
+    -webkit-appearance: none;
+}
+
+.video::-webkit-media-controls-start-playback-button {
+    display: none!important;
+    -webkit-appearance: none;
 }
 body{
   overflow-x: hidden;
