--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,17 +6,17 @@
 video::-internal-media-controls-overlay-cast-button {
     display: none !important;
 }
-.video::-webkit-media-controls-panel {
+video::-webkit-media-controls-panel {
     display: none!important;
     -webkit-appearance: none;
 }
 
-.video::--webkit-media-controls-play-button {
+video::--webkit-media-controls-play-button {
     display: none!important;
     -webkit-appearance: none;
 }
 
-.video::-webkit-media-controls-start-playback-button {
+video::-webkit-media-controls-start-playback-button {
     display: none!important;
     -webkit-appearance: none;
 }
