--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,9 @@
 
 
 /* BODY SECTION */
+video::-webkit-media-controls {
+    display:none !important;
+}
 video::-internal-media-controls-overlay-cast-button {
     display: none !important;
 }
