--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,25 +3,31 @@
 
 
 /* BODY SECTION */
-video::-webkit-media-controls {
-    display:none !important;
-}
 video::-internal-media-controls-overlay-cast-button {
     display: none !important;
 }
-video::-webkit-media-controls-panel {
-    display: none!important;
-    -webkit-appearance: none;
+*::-webkit-media-controls-panel {
+
+  display: none!important;
+
+  -webkit-appearance: none;
+
 }
 
-video::--webkit-media-controls-play-button {
-    display: none!important;
-    -webkit-appearance: none;
+*::--webkit-media-controls-play-button {
+
+  display: none!important;
+
+  -webkit-appearance: none;
+
 }
 
-video::-webkit-media-controls-start-playback-button {
-    display: none!important;
-    -webkit-appearance: none;
+*::-webkit-media-controls-start-playback-button {
+
+  display: none!important;
+
+  -webkit-appearance: none;
+
 }
 body{
   overflow-x: hidden;
