--- a/static/css/style.css
+++ b/static/css/style.css
@@ -356,7 +356,7 @@ hr.socket{
 }
 @media (max-width: 355px){
   .navbar-brand #puertomadero-brand{
-    width: min-content;
+    font-size: 0.8rem !important;
   }
 }
 
