--- a/static/css/fixed.css
+++ b/static/css/fixed.css
@@ -18,7 +18,7 @@ margin-right: 0px!important;
 /*--- Fixed Landing Page Section --*/
 .banner{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -30,7 +30,7 @@ margin-right: 0px!important;
   left: 0;
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   pointer-events: none;
 }
 
