--- a/static/css/style.css
+++ b/static/css/style.css
@@ -269,7 +269,9 @@ footer{
 }
 #brand-footer:hover{
   text-decoration: none;
-
+}
+footer p{
+  margin-bottom: 0.5rem !important;
 }
 footer a{
   color: white;
