--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,9 @@ h1, h2, h3, h4, h5, h6, p:hover{
   letter-spacing: .1rem;
   background: rgb(1, 21, 59) !important
 }
+.navbar-brand span{
+  text-shadow: .35rem .35rem .8rem black;
+}
 .navbar-brand img{
   height: 3.1rem !important;
 
