--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,7 @@ h1, h2, h3, h4, h5, h6, p:hover{
   border-color: #021b4b !important;
   border-width: medium !important;
   border-radius: 0 !important;
+  box-shadow: 1px 1px 2px #021b4b !important;
   padding: .6rem 1.3rem !important;
   font-size: 1.1rem !important;
 }
@@ -138,7 +139,6 @@ h1, h2, h3, h4, h5, h6, p:hover{
 }
 .narrow h1{
   font-size: 2.6rem;
-  text-shadow: .45rem .45rem .8rem black;
   font-weight: 700;
   margin-top: 1.4rem !important;
 }
