--- a/static/css/style.css
+++ b/static/css/style.css
@@ -155,7 +155,7 @@ h1, h2, h3, h4, h5, h6, p:hover{
   margin: 0 auto !important;
   color: white;
   background-color: #021b4b !important;
-  box-shadow: 1px 1px 2px #021b4b !important;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8) !important;
   border-color: #021b4b !important;
   transition: all 0.5s;
 }
