--- a/static/css/style.css
+++ b/static/css/style.css
@@ -188,6 +188,7 @@ h3.heading{
 .feature svg.svg-inline--fa{
   color:  rgb(8, 48, 122) !important;
   font-size: 5rem !important;
+  text-shadow: .55rem .55rem .8rem black !important;
 }
 .feature img{
   width: 100%;
