--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,6 +206,7 @@ h3.heading{
   font-size: 1.5rem;
   font-weight: 700;
   text-transform: uppercase;
+  text-shadow: .55rem .55rem .8rem black !important;
   color: rgb(39, 39, 39);
 }
 .feature p{
@@ -252,6 +253,7 @@ h3.heading{
 .clients img{
   width: 100%;
   border-radius: 50%;
+  text-shadow: .55rem .55rem .8rem black !important;
 }
 blockquote .svg-inline--fa{
   color: rgb(8, 48, 122) !important;
