--- a/static/css/fixed.css
+++ b/static/css/fixed.css
@@ -92,7 +92,7 @@ margin-right: 0px!important;
           transform: translateZ(0);
   will-change: transform;
 }
-.christmas {
+.promoBackground {
   position: fixed;
   display: block;
   top: 0;
