--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,21 +111,22 @@ h1, h2, h3, h4, h5, h6, p:hover{
   padding-bottom: 1.2rem;
 }
 .btn-lg{
-  font-size: 1.3rem !important;
-  background-color: #021b4b !important;
-  border-color: #021b4b !important;
-  border-width: medium !important;
-  border-radius: 0 !important;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8) !important;
-  padding: .6rem 1.3rem !important;
   font-size: 1.1rem !important;
+  border-width: medium !important;
+  border-radius: 0;
+  text-transform: uppercase;
+  padding: .6rem 1.2rem !important;
+  margin: 0 auto !important;
+  color: white;
+  background-color: #021b4b !important;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8) !important;
+  border-color: #021b4b !important;
+  transition: all 0.5s;
 }
 .btn-lg:hover{
-  font-size: 1.1rem !important;
-  color: white;
   background-color: #052e79 !important;
   border-color: #052e79 !important;
-  transform: scale(1.015);
+  transform: scale(1.08);
 }
 
 /* COURSE SECTION */
