--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,8 +144,8 @@ h1, h2, h3, h4, h5, h6, p:hover{
   margin-top: 1.4rem !important;
 }
 #promo-underline .heading-underline{
-  background-color: rgb(1, 21, 59) !important;
-  color:  rgb(1, 21, 59) !important;
+  background-color: #021b4b !important;
+  color:  #021b4b !important;
 }
 .btn-secondary{
   font-size: 1.1rem !important;
