--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6, p:hover{
 }
 
 /* PROMO SECTION */
-.ImgPromo{
+.imagePromo{
   max-width: 25% !important;
   border-radius: 50%;
 }
